--- a/src/app/core/pattern/pattern.component.html
+++ b/src/app/core/pattern/pattern.component.html
@@ -1,1 +1,8 @@
-<p>pattern works!</p>,
+<div
+  class="pattern"
+  [style.top]="this.y() + 'px'"
+  [style.left]="this.x() + 'px'"
+  (mousedown)="pointerDown($event)"
+>
+  *
+</div>
