--- a/src/app/ui/sidebar/sidebar.component.html
+++ b/src/app/ui/sidebar/sidebar.component.html
@@ -2,6 +2,7 @@
   <header class="sidebar-header">
     <div class="collapse-button" (click)="collapse()">&#60;</div>
   </header>
+  <hr width="97%" />
 
   test
 </div>
