--- a/src/app/ui/toolbar/toolbar.component.html
+++ b/src/app/ui/toolbar/toolbar.component.html
@@ -1,4 +1,9 @@
 <header class="toolbar">
-  <img src="../../../assets/logicdesigner.svg" alt="Logo" class="logo" />
-  <h2 class="large">Logic Designer</h2>
+  <img
+    src="../../../assets/logicdesigner.svg"
+    alt="Logo"
+    draggable="false"
+    class="logo"
+  />
+  <span class="title">Logic Designer</span>
 </header>
