--- a/src/app/core/grid/grid.component.css
+++ b/src/app/core/grid/grid.component.css
@@ -24,3 +24,26 @@
   cursor: grab;
   /* cursor: grabbing; */
 }
+
+.center-line {
+  position: absolute;
+  background: red;
+  z-index: 10; /* above grid lines, below pieces if you want */
+  pointer-events: none; /* so it doesn't block mouse events */
+}
+
+.center-line.vertical {
+  top: 0;
+  left: 50%;
+  width: 2px; /* or whatever thickness you want */
+  height: 100%;
+  transform: translateX(-50%);
+}
+
+.center-line.horizontal {
+  left: 0;
+  top: 50%;
+  width: 100%;
+  height: 2px;
+  transform: translateY(-50%);
+}
