--- a/src/app/ui/sidebar/sidebar.component.css
+++ b/src/app/ui/sidebar/sidebar.component.css
@@ -37,6 +37,11 @@
       background-color: var(--secondary-color);
     }
   }
+
+  hr {
+    border: none;
+    border-top: 1px solid var(--dark-accent-color);
+  }
 }
 
 .sidebar[collapsed] {
