--- a/src/app/ui/toolbar/toolbar.component.css
+++ b/src/app/ui/toolbar/toolbar.component.css
@@ -10,27 +10,27 @@
   top: 0;
   left: 0;
 
+  user-select: none;
+
   background-color: var(--background-color);
   color: var(--text-color);
 
-  /* margin: 5px; */
-  /* border-radius: 0.4em; */
-
   width: 100vw;
-  /* width: calc(100vw - var(--toolbar-margin) * 2); */
   height: var(--toolbar-height);
-  /* height: 50px; */
 
-  /* display: flex; */
-  /* flex-direction: column; */
-
-  flex: 0 0 250px; /* sidebar width */
+  flex: 0 0 250px;
 
   z-index: 2;
+
+  .title {
+    font-size: 1.25em;
+    padding: 0px 5px 0px 5px;
+  }
 }
 
 .logo {
   /* padding-left: 5px; */
+  user-select: none;
   width: 34px;
   padding: 0px 5px 0px 5px;
 }
