--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
   --primary-color: #3bb273;
   --secondary-color: #a8ffce;
   --accent-color: #c9f658;
-  --dark-accent-color: #1b4d3e;
+  --dark-accent-color: #2f3631;
   --contrast: #24292e;
   --background-color: #191d1a;
 
