--- a/src/app/core/grid/grid.component.css
+++ b/src/app/core/grid/grid.component.css
@@ -3,7 +3,7 @@
   height: 100vh;
   overflow: hidden;
   position: relative;
-  background: #181818;
+  background: #202020;
   user-select: none;
 
   /* z-index: 0; */
@@ -25,17 +25,17 @@
   /* cursor: grabbing; */
 }
 
-.center-line {
+/* .center-line {
   position: absolute;
   background: red;
-  z-index: 10; /* above grid lines, below pieces if you want */
-  pointer-events: none; /* so it doesn't block mouse events */
+  z-index: 10; 
+  pointer-events: none; 
 }
 
 .center-line.vertical {
   top: 0;
   left: 50%;
-  width: 2px; /* or whatever thickness you want */
+  width: 2px; 
   height: 100%;
   transform: translateX(-50%);
 }
@@ -46,4 +46,4 @@
   width: 100%;
   height: 2px;
   transform: translateY(-50%);
-}
+} */
