--- a/src/app/core/grid/grid.component.html
+++ b/src/app/core/grid/grid.component.html
@@ -21,12 +21,9 @@
     [style.background]="gridBackground"
     #canvas
   >
-    <div class="center-line vertical"></div>
-    <div class="center-line horizontal"></div>
-    <x-pattern
-      [gridZoom]="this.zoom()"
-      [gridSize]="this.grid.size"
-      [canvasRect]="this.canvas.nativeElement.getBoundingClientRect()"
-    ></x-pattern>
+    <!-- <div class="center-line vertical"></div>
+    <div class="center-line horizontal"></div> -->
+
+    <x-pattern [gridZoom]="this.zoom()" [gridSize]="this.grid.size"></x-pattern>
   </div>
 </div>
