--- a/src/app/ui/button/button.component.html
+++ b/src/app/ui/button/button.component.html
@@ -1,4 +1,4 @@
-<div class="button">
+<div class="button" (click)="buttonClicked()">
   @if (this.icon()) {
   <x-icon [iconName]="this.icon()"></x-icon>
   } @else {
